--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "wasmsign3"
 version = "0.1.0"
 edition = "2024"
+license = "MPL-2.0"
+description = "wasmsign2 but slh-dsa"
 
 [dependencies]
 embedded-io = "0.6.1"
