--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,20 @@ edition = "2024"
 license = "MPL-2.0"
 description = "wasmsign2 but slh-dsa"
 
-[dependencies]
+[workspace]
+members = [".", "module"]
+
+[workspace.dependencies]
 embedded-io = "0.6.1"
 sha3 = { version = "0.10.8", default-features = false }
 sha3-literal = "0.1.0"
 slh-dsa = { version = "0.0.3", default-features = false }
 typenum = "1.18.0"
+
+[dependencies]
+embedded-io.workspace = true  # = "0.6.1"
+portal-solutions-wasmsign3-module = { version = "0.1.0", path = "module" }
+sha3.workspace = true         # = { version = "0.10.8", default-features = false }
+sha3-literal.workspace = true # = "0.1.0"
+slh-dsa.workspace = true      # = { version = "0.0.3", default-features = false }
+typenum.workspace = true      # = "1.18.0"
